src/components/Intro/Intro.module.scss
@use "../../styles/variables.scss" as *;
@use "sass:color";

section {
  margin: 3rem auto;
  width: 85dvw;
  height: 85dvh;

  &,
  & * {
    max-width: 100%;
    max-height: 100%;
    border-radius: 30px;
  }
}

.card {
  width: 100%;
  height: 100%;
  color: $color-text;
  font-size: clamp(10px, 2vw + 5px, 20px);
  cursor: pointer;

  // transition
  -webkit-transform-style: preserve-3d;
  transform-style: preserve-3d;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
}

.flipped {
  -webkit-transform: rotateY(180deg);
  transform: rotateY(180deg);
}

.face {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  overflow: hidden;
  padding: 0.5rem;
}

.front {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: flex-end;
  text-align: center;

  background:
    linear-gradient(rgba($color-primary, 0.1), rgba($color-primary, 0.3)),
    url("../../assets/images/me.png");
  background-size: cover;
  background-position: left;
  background-repeat: no-repeat;
  z-index: 1;

  footer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 0;

    padding: 1rem;
    background: rgba($color-background, 0.6);
    backdrop-filter: blur(10px);

    > span,
    p {
      color: $color-text;
      white-space: pre-line;
      width: 100%;
      height: 100%;

      strong {
        border-radius: 0;
        white-space: nowrap;
        background: linear-gradient(
          to right,
          color.adjust($color-primary, $lightness: 10%),
          color.adjust($color-primary, $lightness: -10%)
        );
        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent;
      }

      em {
        color: $color-primary;
      }
    }

    span:first-of-type {
      white-space: nowrap;
      font-size: 1.3em;
      border-bottom: 1px solid rgba($color-primary, 0.3);
      border-radius: 0;
      width: 85%;
      text-align: center;
      margin: 0 auto;
    }
  }
}

.back {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  overflow: hidden;
  z-index: 1;

  -webkit-transform: rotateY(180deg);
  transform: rotateY(180deg);

  &:before {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: -1;
    background: linear-gradient(45deg, $color-neutral, $color-background);

    -webkit-transform: rotateY(180deg);
    -moz-transform: rotateY(180deg);
    -ms-transform: rotateY(180deg);
    -o-transform: rotateY(180deg);
    transform: rotateY(180deg);
  }
}

.about {
  flex-grow: 1;

  margin: 0 auto;
  overflow-y: auto;
  overflow-x: hidden;
  width: 100%;
  height: 100%;
  padding: 1rem;
  font-size: 1.3em;

  h1 {
    border-radius: 0;
    background: linear-gradient(
      to right,
      color.adjust($color-primary, $lightness: 20%),
      color.adjust($color-primary, $lightness: -10%)
    );
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }

  h3 {
    padding-top: clamp(1rem, 5vw, 3rem);
  }

  h4 {
    padding-top: clamp(0.7rem, 5vw, 2rem);
  }

  table {
    font-size: clamp(5px, 1vw + 1px, 15px);

    // headers (vertical and horizontal, respectively)
    th:first-child,
    tr:first-child > th {
      background: color.adjust($color-accent, $lightness: -10%);
      border: 1px solid $color-accent;
      font-weight: bold;
      font-size: 1.5em;
    }

    // hide the first cell
    tr:first-of-type > th:first-of-type {
      border: 0;
      background: none;
    }

    th,
    td {
      border: 1px solid $color-accent;
      border-radius: 10px;
      padding: 0.2rem;
      background-color: $color-neutral;
    }
  }
}

.message {
  display: none;
}

@media (orientation: landscape) {
  section {
    width: 70dvw;
    height: 70dvh;
  }

  .front {
    display: grid;
    grid-template-rows: 1fr 1fr;
    grid-template-columns: 70% 30%;
    background:
      radial-gradient(
        circle,
        rgba($color-primary, 0.3),
        rgba($color-background, 0.9)
      ),
      url("../../assets/images/me.png");
    background-size: cover;
    background-position: top;
    background-repeat: no-repeat;

    footer {
      grid-row: 2;
      grid-column: 2;
      gap: 1rem;

      width: fit-content;
      height: 100%;
      background: rgba($color-background, 0);
      backdrop-filter: blur(30px);

      > span * {
        white-space: normal;
      }
    }
  }
  .about {
    padding: 3rem;

    table {
      font-size: clamp(10px, 1vw + 3px, 15px);

      th,
      td {
        padding: 0.5rem;
      }
    }
  }

  .message {
    display: block;
  }
}

